--- a/lldb/source/Expression/CMakeLists.txt
+++ b/lldb/source/Expression/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_lldb_library(lldbExpression
   DiagnosticManager.cpp
+  DWARFEvaluator.cpp
+  DWARFEvaluatorFactory.cpp
   DWARFExpression.cpp
   DWARFExpressionList.cpp
   Expression.cpp
